--- a/sccglue/SCCoreGlue.cfg
+++ b/sccglue/SCCoreGlue.cfg
@@ -8,6 +8,7 @@ ArgumentIsString scc_begin_statement 1
 ArgumentIsString scc_bind_text 2
 ReturnsString scc_get_column_name
 ReturnsString scc_get_column_text
+ReturnsString scc_get_column_long_as_text
 ReturnsString scc_get_last_error_message
 
 JavaOutputDir ./java
