--- a/cordova-demo/Makefile
+++ b/cordova-demo/Makefile
@@ -13,6 +13,8 @@ prepare-plugin: $(SQLITE_AMALGAMATION)/sqlite3.c
 	cp ../sccglue/sqlite-connection-core-glue.jar cordova-sqlite-demo-plugin/dependencies
 	cp $(SQLITE_AMALGAMATION)/sqlite3.* cordova-sqlite-demo-plugin/dependencies
 	cp ../sqlite-connection-core.[hc] cordova-sqlite-demo-plugin/dependencies
+	cp ../object-batch-connection/android/io/sqlc/SQLiteBatchCore.java cordova-sqlite-demo-plugin/dependencies
+	cp ../object-batch-connection/ios/SQLiteBatchCore.[hm] cordova-sqlite-demo-plugin/dependencies
 
 prepare-app: prepare-plugin
 	cordova plugin add ./cordova-sqlite-demo-plugin
